resources/assets/styles/layouts/_events.scss
.page-template-template-events {
  .success-box {
    .upcoming {
      font-family: benton-sans-condensed, sans-serif;
    }

    img {
      width: 100%;
    }
  }
}

.tax-description {
  border-bottom: 2px solid #b5c8d3;
}

//Loop
.tribe-events-list {
  .type-tribe_events {
    .tribe-events-event-image {
      margin: 0 !important;
      width: 100%;
    }
  }

  .tribe-events-loop .type-tribe_events {
    margin-bottom: 1em;
    padding: 0;
  }

  .tribe-address {
    display: inline-block;
  }

  .tribe-country-name,
  .tribe-postal-code,
  br {
    display: none;
  }

  .tribe-events-gmap {
    display: block;
  }
}

//Loop: Details
.tribe-events-venue-details,
.tribe-event-schedule-details {
  font-size: 20px;
  line-height: 1.4em;
  font-weight: bold;
  font-family: benton-sans, sans-serif;
}

.tribe-events-loop .tribe-event-featured {
  background: $primary;
  padding: 0;

  .tribe-events-venue-details,
  .tribe-event-schedule-details {
    color: white;
  }

  a.tribe-events-read-more {
    color: $primary !important;
  }
}

//Sidebar
.tribe-events-event-meta {
  background: none !important;
  border: none !important;

  .tribe-events-meta-group {
    width: 100%;
    padding: 0;
  }

  .tribe-events-abbr {
    text-decoration: none;
  }

  .tribe-events-single-section-title {
    display: none;
  }

  dd {
    margin-bottom: 30px;
    font-size: 16px;
  }
}

//Map
.single-tribe_events .tribe-events-meta-group .tribe-events-venue-map {
  margin: 0;
  width: 100%;
  padding: 0;
}

.tribe-events-content {
  iframe {
    max-width: 100%;
  }
}

#tribe-events-content-wrapper {
  margin-bottom: 2em;
}

#tribe-bar-form {
  background: none;
  display: none;

  .tribe-bar-submit {
    margin-left: 0;
  }

  .tribe-bar-search-filter {
    width: 50%;
  }

  .tribe-bar-submit input[type="submit"] {
    background: $primary;
    color: white;
    padding: 10px;
    margin-top: 17px;
  }

  #tribe-bar-date,
  #tribe-bar-search {
    border: 1px solid black;
    padding: 15px 10px;
  }
}

//Month Header
.tribe-events-list-separator-month {
  text-align: center;
  font-size: 50px;
  background: none;
  position: relative;
  color: $primary;
  margin-bottom: 30px;

  &::before {
    position: absolute;
    top: 50%;
    left: -30px;
    right: -30px;
    content: " ";
    height: 3px;
    background: $primary;
    z-index: 10;
    margin: 0 auto;
    width: 50%;
  }

  span {
    background: white;
    position: relative;
    z-index: 1000;
    padding: 10px;
  }
}

.tribe-events-sub-nav {
  a {
    color: white;
    background: $primary;
    display: inline-block;
    padding: 15px 25px;
    border: 2px solid white;

    &:hover {
      background: white;
      color: $primary;
      border: 2px solid $primary;
    }
  }
}

